Update config-data